<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>de.fraunhofer.iosb.ilt</groupId>
	<artifactId>FROST-Client</artifactId>
	<version>0.20-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>FROST-Client</name>
	<description>A client implementation of the OGC SensorThings API.</description>
	<url>https://github.com/FraunhoferIOSB/FROST-Client</url>
	<inceptionYear>2016</inceptionYear>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>

		<bintray.subject>fraunhoferiosb</bintray.subject>
		<bintray.repo>Maven</bintray.repo>
		<bintray.package>FROST-Client</bintray.package>

		<httpclient.version>4.5.6</httpclient.version>
		<jaxb-api.version>2.3.1</jaxb-api.version>
		<jackson.version>2.9.8</jackson.version>
		<jacksonGeojson.version>1.6</jacksonGeojson.version>
		<jjwt.version>0.7.0</jjwt.version>
		<json-patch.version>1.9</json-patch.version>
		<junit.version>4.12</junit.version>
		<maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
		<maven-dependency-plugin.version>3.1.1</maven-dependency-plugin.version>
		<maven-javadoc-plugin.version>3.0.1</maven-javadoc-plugin.version>
		<maven-release-plugin.version>2.5.3</maven-release-plugin.version>
		<maven-source-plugin.version>3.0.1</maven-source-plugin.version>
		<slf4j-api.version>1.7.25</slf4j-api.version>
		<threeten-extra.version>1.0</threeten-extra.version>
	</properties>

	<licenses>
		<license>
			<name>MIT</name>
			<comments>For more information see the LICENSE file included with the sources.</comments>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Hylke van der Schaaf</name>
			<email>hylke.vanderschaaf@iosb.fraunhofer.de</email>
			<organization>Fraunhofer IOSB</organization>
			<organizationUrl>https://www.iosb.fraunhofer.de</organizationUrl>
		</developer>
	</developers>

	<organization>
		<name>Fraunhofer IOSB</name>
		<url>http://iosb.fraunhofer.de</url>
	</organization>

	<scm>
		<url>https://github.com/FraunhoferIOSB/FROST-Client</url>
		<connection>scm:git:git@github.com:FraunhoferIOSB/FROST-Client.git</connection>
		<developerConnection>scm:git:git@github.com:FraunhoferIOSB/FROST-Client.git</developerConnection>
		<tag>HEAD</tag>
	</scm>

	<issueManagement>
		<system>GitHub</system>
		<url>https://github.com/FraunhoferIOSB/FROST-Client/issues</url>
	</issueManagement>

	<distributionManagement>
		<repository>
			<id>fraunhoferiosb-Maven</id>
			<url>https://api.bintray.com/maven/${bintray.subject}/${bintray.repo}/${bintray.package}/;publish=1</url>
		</repository>
	</distributionManagement>

	<profiles>
		<profile>
			<id>SUREFIRE-1588</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<properties>
				<argLine>-Djdk.net.URLClassPath.disableClassPathURLCheck=true</argLine>
			</properties>
		</profile>
	</profiles>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<source>${maven.compiler.source}</source>
					<target>${maven.compiler.target}</target>
					<compilerArguments>
						<Xlint:unchecked/>
						<Xlint:deprecation/>
					</compilerArguments>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>${maven-source-plugin.version}</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>verify</phase>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>${maven-javadoc-plugin.version}</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>${maven-release-plugin.version}</version>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>${httpclient.version}</version>
		</dependency>
		<dependency>
			<groupId>javax.xml.bind</groupId>
			<artifactId>jaxb-api</artifactId>
			<version>${jaxb-api.version}</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>${jackson.version}</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-annotations</artifactId>
			<version>${jackson.version}</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
			<version>${jackson.version}</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.datatype</groupId>
			<artifactId>jackson-datatype-jsr310</artifactId>
			<version>${jackson.version}</version>
		</dependency>
		<dependency>
			<groupId>de.grundid.opendatalab</groupId>
			<artifactId>geojson-jackson</artifactId>
			<version>${jacksonGeojson.version}</version>
		</dependency>
		<dependency>
			<groupId>org.threeten</groupId>
			<artifactId>threeten-extra</artifactId>
			<version>${threeten-extra.version}</version>
		</dependency>
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt</artifactId>
			<version>${jjwt.version}</version>
		</dependency>
		<dependency>
			<groupId>com.github.fge</groupId>
			<artifactId>json-patch</artifactId>
			<version>${json-patch.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j-api.version}</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.2.3</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
</project>
